update to 1.19 and kotlin 1.7.10 add permission to tab completer add individual emoji permissions style improvements HOWEVER, player names are not sorted at the top.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,7 +6,7 @@ emoji-wrapping: ":"
 
 #Require permission emoji.use to be able to use emojis.
 use-permissions: false
-individual-permissions: false #TODO Require emoji.use.[name] to use emojis
+individual-permissions: false
 
 #Whether to spam the server log with every emoji's data on startup
 verbose: false
