write a readme. update name of plugin in config.yml. add images for readme.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
-# Emojifier plugin by Legitimoose
+# EmojiTab by Legitimoose
 
 # Character to put around emojis, can be left blank if desired.
 # Defaults to semicolon ":"
